--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
-name = "chi-prober"
+name = "chip"
 version = "0.1.0"
 authors = ["up9cloud <>"]
 
 [dependencies]
-
 rand = "0.4.0"
+
+log = "0.4"
+env_logger = "0.6"
+
+futures = "0.1"
+
+serde = "1.0"
+serde_json = "1.0"
+
+actix-rt = "0.2"
+actix-web = "1.0"
+actix-files = "0.1"
+
+sysinfo = "0.9"
